--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,31 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.10'
+    ext.versions = [
+            'code'          : 1,
+            'name'          : "1.0.0",
+            'compileSdk'    : 27,
+            'targetSdk'     : 27,
+            'minSdk'        : 21,
+            'buildTools'    : '27.0.2',
+            'gradle'        : '3.0.1',
+            'googleServices': '3.1.0',
+            'supportLibrary': '27.0.2',
+            'firebase'      : '11.8.0',
+            'glide'         : '4.5.0',
+            'kotlin'        : '1.2.10',
+            'retrofit'      : '2.3.0',
+    ]
+
     repositories {
         google()
         jcenter()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.gms:google-services:3.1.0'
+        classpath "com.android.tools.build:gradle:${versions.gradle}"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
+        classpath "com.google.gms:google-services:${versions.googleServices}"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
