--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,12 +49,14 @@ dependencies {
     annotationProcessor "com.github.bumptech.glide:compiler:${versions.glide}"
     implementation "com.github.bumptech.glide:glide:${versions.glide}"
     implementation "com.github.bumptech.glide:okhttp3-integration:${versions.glide}"
-    kapt "android.arch.lifecycle:compiler:1.0.0"
+    kapt "android.arch.lifecycle:compiler:1.1.0"
     kapt "com.github.bumptech.glide:compiler:${versions.glide}"
     implementation 'jp.wasabeef:glide-transformations:2.0.2'
     implementation 'com.orhanobut:dialogplus:1.11@aar'
+    //Yalantis Libraries: https://yalantis.com/
     implementation 'com.github.Yalantis:GuillotineMenu-Android:1.2'
     implementation 'com.yalantis:phoenix:1.2.3'
+    implementation 'com.yalantis:contextmenu:1.0.7'
     implementation 'com.twitter.sdk.android:twitter:3.1.1'
     implementation 'com.facebook.android:facebook-android-sdk:4.23.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$versions.kotlin"
