--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,2 @@
-include ':app'
+include ':app'//, ':react-native-i18n'
+//project(':react-native-i18n').projectDir = new File(rootProject.projectDir, '/node_modules/react-native-i18n/android')
